# AgentPilot

./: .cursorrules  .env.example  .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt
FractFlow/: __init__.py  agent.py  tool_template.py
FractFlow/conversation/: base_history.py
FractFlow/conversation/provider_adapters/: __init__.py  base_adapter.py  deepseek_adapter.py  openai_adapter.py  openrouter_adapter.py  qwen_adapter-old.py  qwen_adapter.py
FractFlow/core/: orchestrator.py  query_processor.py  tool_executor.py
FractFlow/infra/: config.py  error_handling.py  logging_utils.py
FractFlow/mcpcore/: __init__.py  client_pool.py  launcher.py  tool_loader.py
FractFlow/models/: base_model.py  deepseek_model.py  deepseek_model_deprecated.py  factory.py  openrouter_model.py  orchestrator_model.py  qwen_model.py  qwen_modell_deprecated.py  toolcall_model.py
FractFlow/tests/: test_toolcall_model.py
FractFlow/ui/: ui.py
tools/aircraft/: README.md  __init__.py  app.py  flight_agent.py
tools/aircraft/flight_brain/: landing_control.py  pid_control.py
tools/aircraft/msfs2024tools/: capture_server.py  flight_operations.py  flight_operations_onlyVLM.py  load_camera_params.py  save_camera_params.py
tools/aircraft/safety_system/: evaluate.py  evaluate_1.py  run_single_frame_vlm.py  safety_module.py
tools/aircraft/safety_tools/: mode_switch_vlm.py  safety_vlm.py  safety_vlm_bak.py  video_depth_estimation.py
tools/aircraft/sam_tools/: sam_client.py  sam_server.py  sam_tool.py
tools/aircraft/tracking_tools/: tracking_tool.py
tools/aircraft/utils/: __init__.py  get_gps.py  image_utils.py  logger_config.py  self_logging.py
(+1 files in other folders)
